--- a/index.html
+++ b/index.html
@@ -1,72 +1,18 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Book Updates — Furious Acid</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      display: flex;
-      min-height: 100vh;
-      align-items: center;
-      justify-content: center;
-      background: #111;
-      color: #eee;
-    }
-    .card {
-      width: min(520px, 92vw);
-      background: #1b1b1b;
-      padding: 28px;
-      border-radius: 16px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.45);
-      text-align: center;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 12px;
-      margin-bottom: 16px;
-    }
-    h1 {
-      font-size: 1.35rem;
-      margin: 0 0 6px;
-    }
-    p {
-      opacity: 0.85;
-      margin: 0.25rem 0 1rem;
-    }
-    form {
-      display: flex;
-      gap: 8px;
-    }
-    input[type="email"] {
-      flex: 1;
-      padding: 12px 14px;
-      border-radius: 10px;
-      border: 1px solid #333;
-      background: #0f0f0f;
-      color: #eee;
-    }
-    button {
-      padding: 12px 16px;
-      border: 0;
-      border-radius: 10px;
-      background: #4f8cff;
-      color: #fff;
-      cursor: pointer;
-    }
-    .note {
-      font-size: 0.85rem;
-      opacity: 0.7;
-      margin-top: 10px;
-    }
-    .hide {
-      display: none;
-    }
-  </style>
-</head>
+<body>
+  <div class="card">
+    <h1>Redirecting…</h1>
+    <p>You’re being sent to the official Amazon page for<br><strong>Marijuana Manual: Technical Notebook</strong>.</p>
+    <p>
+      If nothing happens,
+      <a href="https://www.amazon.com/dp/B0G8VLPS1K">
+        click here to view the book
+      </a>.
+    </p>
+  </div>
+</body>
+
 <body>
   <div class="card">
     <img src="https://picsum.photos/960/540?blur=1" alt="Book cover preview" />
